<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.sysdesc</groupId>
	<artifactId>sysdesc-pesquisa</artifactId>
	<version>0.0.2</version>
	<packaging>pom</packaging>
	<name>SysdescPesquisa</name>
	<description>Projeto de Pesquisas</description>


	<properties>
		<sysdesc.version>0.0.2</sysdesc.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<modules>
		<module>sysdesc-pesquisa-util</module>
		<module>sysdesc-pesquisa-repository</module>
		<module>sysdesc-pesquisa-service</module>
		<module>sysdesc-pesquisa-interface</module>
	</modules>
</project>